added new word button

--- a/index.html
+++ b/index.html
@@ -15,6 +15,8 @@
 </head>
 <body>
 
+
+
 <div id="asciiwrap">
 <pre id="ascii">
 ('-. .-.   ('-.         .-') _                         .-') _                   _   .-')      ('-.         .-') _
@@ -33,20 +35,18 @@
     <div id="attemptsremain">10 attempts remain.</div>
     <div id="multiremain">3 multi-guess attempts remain.</div>
     <div id="inputwrap" class="input-group mb-3">
-      <input id="inputfield" type="text" class="form-control" placeholder="Guess a letter or the entire word!" aria-label="Recipient's username" aria-describedby="basic-addon2">
-      <div class="input-group-append">
-        <button id="inputbutton" class="btn btn-outline-secondary" type="button">Button</button>
+        <button id="resetbutton" class="btn btn-outline-secondary" type="button">New Word</button>
+        <input id="inputfield" type="text" class="form-control" placeholder="Guess a letter or the entire word!" aria-label="Recipient's username" aria-describedby="basic-addon2">
+        <div class="input-group-append">
+        <button id="inputbutton" class="btn btn-outline-secondary" type="button">Submit</button>
       </div>
     </div>
 </div>
 <div id="infomessage">Guess a letter or the entire word!</div>
 
-<!--<div class="input-group mb-3">-->
-<!--  <input id="inputfield" type="text" class="form-control" placeholder="Guess a letter or the entire word!" aria-label="Recipient's username" aria-describedby="basic-addon2">-->
-<!--  <div class="input-group-append">-->
-<!--    <button id="inputbutton" class="btn btn-outline-secondary" type="button">Button</button>-->
-<!--  </div>-->
-<!--</div>-->
+
+
+
 
 
 
