--- a/index.html
+++ b/index.html
@@ -36,7 +36,7 @@
     <div id="multiremain">3 multi-guess attempts remain.</div>
     <div id="inputwrap" class="input-group mb-3">
         <button id="resetbutton" class="btn btn-outline-secondary" type="button">New Word</button>
-        <input id="inputfield" type="text" class="form-control" placeholder="Guess a letter or the entire word!" aria-label="Recipient's username" aria-describedby="basic-addon2">
+        <input id="inputfield" type="text" class="form-control" placeholder="Guess letter or word..." aria-label="Recipient's username" aria-describedby="basic-addon2">
         <div class="input-group-append">
         <button id="inputbutton" class="btn btn-outline-secondary" type="button">Submit</button>
       </div>
