--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
 </div>
 <div id="starred"><div id="starredtext"></div></div>
 <div id="info">
-    <div id="attemptsremain">10 attempts remain.</div>
-    <div id="multiremain">5 multi-guess attempts remain.</div>
+    <div id="attemptsremain">10 letter attempts remain.</div>
+    <div id="multiremain">5 word attempts remain.</div>
     <div id="inputwrap" class="input-group mb-3">
         <button id="resetbutton" class="btn btn-outline-secondary" type="button">New Word</button>
         <input id="inputfield" type="text" class="form-control" placeholder="Guess letter or word..." aria-label="Recipient's username" aria-describedby="basic-addon2">
