added starred word animation

--- a/index.html
+++ b/index.html
@@ -10,6 +10,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="js/random-words.js"></script>
     <script src="js/Hangman.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
 
 
 </head>
@@ -30,7 +31,8 @@
 `--' `--'  `--' `--'`--'  `--'   `------'   `--'   `--'  `--'   `------'         `--'   `--'  `--' `--'`--'  `--'
 </pre>
 </div>
-<div id="starred"><div id="starredtext"></div></div>
+<!--<div id="starred"><div id="starredtext"></div></div>-->
+<h1 class="ml16">******</h1>
 <div id="info">
     <div id="attemptsremain">10 letter attempts remain.</div>
     <div id="multiremain">5 word attempts remain.</div>
@@ -43,6 +45,9 @@
     </div>
 </div>
 <div id="infomessage">Guess a letter or the entire word!</div>
+
+
+
 
 
 
