--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 </pre>
 </div>
 <!--<div id="starred"><div id="starredtext"></div></div>-->
-<h1 class="ml16">******</h1>
+<h1 class="starredtext">&nbsp</h1>
 <div id="info">
     <div id="attemptsremain">10 letter attempts remain.</div>
     <div id="multiremain">5 word attempts remain.</div>
