--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <script src="js/random-words.js"></script>
     <script src="js/Hangman.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
-
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
 </head>
 <body>
@@ -37,10 +37,10 @@
     <div id="attemptsremain">10 letter attempts remain.</div>
     <div id="multiremain">5 word attempts remain.</div>
     <div id="inputwrap" class="input-group mb-3">
-        <button id="resetbutton" class="btn btn-outline-secondary" type="button">New Word</button>
-        <input id="inputfield" type="text" class="form-control" placeholder="Guess letter or word..." aria-label="Recipient's username" aria-describedby="basic-addon2">
+        <button id="resetbutton" class="btn btn-outline-secondary" type="button"><i class="bi bi-arrow-repeat"></i></button>
+        <input id="inputfield" type="text" class="form-control" placeholder="Guess letter or word..." aria-label="Letter guessing input field" aria-describedby="basic-addon2" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Guess letter or word...'">
         <div class="input-group-append">
-        <button id="inputbutton" class="btn btn-outline-secondary" type="button">Submit</button>
+        <button id="inputbutton" class="btn btn-outline-secondary" type="button"><i class="bi bi-check-lg"></i></button>
       </div>
     </div>
 </div>
