Added info message animation corrected attempts calculation prevented attempts loss on same letter attempts

--- a/index.html
+++ b/index.html
@@ -44,9 +44,13 @@
       </div>
     </div>
 </div>
-<div id="infomessage">Guess a letter or the entire word!</div>
 
-
+<h1 class="infosection">
+  <span class="text-wrapper">
+    <span class="infomessage">&nbsp</span>
+    <span class="line"></span>
+  </span>
+</h1>
 
 
 
