--- a/index.html
+++ b/index.html
@@ -13,24 +13,33 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
 
+    <style type="text/css">
+    @font-face {
+    font-family: "My Custom Font";
+    src: url(/fonts/StickFigures.ttf) format("truetype");
+    }
+    </style>
+
 </head>
 <body>
 
 
 
-<div id="asciiwrap">
-<pre id="ascii">
-('-. .-.   ('-.         .-') _                         .-') _                   _   .-')      ('-.         .-') _
-( OO )  /  ( OO ).-.    ( OO ) )                       ( OO ) )                 ( '.( OO )_   ( OO ).-.    ( OO ) )
-,--. ,--.  / . --. /,--./ ,--,'  ,----.     ,-.-') ,--./ ,--,'  ,----.           ,--.   ,--.) / . --. /,--./ ,--,'
-|  | |  |  | \-.  \ |   \ |  |\ '  .-./-')  |  |OO)|   \ |  |\ '  .-./-')        |   `.'   |  | \-.  \ |   \ |  |\
-|   .|  |.-'-'  |  ||    \|  | )|  |_( O- ) |  |  \|    \|  | )|  |_( O- )       |         |.-'-'  |  ||    \|  | )
-|       | \| |_.'  ||  .     |/ |  | .--, \ |  |(_/|  .     |/ |  | .--, \       |  |'.'|  | \| |_.'  ||  .     |/
-|  .-.  |  |  .-.  ||  |\    | (|  | '. (_/,|  |_.'|  |\    | (|  | '. (_/       |  |   |  |  |  .-.  ||  |\    |
-|  | |  |  |  | |  ||  | \   |  |  '--'  |(_|  |   |  | \   |  |  '--'  |        |  |   |  |  |  | |  ||  | \   |
-`--' `--'  `--' `--'`--'  `--'   `------'   `--'   `--'  `--'   `------'         `--'   `--'  `--' `--'`--'  `--'
-</pre>
-</div>
+<!--<div id="asciiwrap">-->
+<!--<pre id="ascii">-->
+<!--('-. .-.   ('-.         .-') _                         .-') _                   _   .-')      ('-.         .-') _-->
+<!--( OO )  /  ( OO ).-.    ( OO ) )                       ( OO ) )                 ( '.( OO )_   ( OO ).-.    ( OO ) )-->
+<!--,&#45;&#45;. ,&#45;&#45;.  / . &#45;&#45;. /,&#45;&#45;./ ,&#45;&#45;,'  ,&#45;&#45;&#45;&#45;.     ,-.-') ,&#45;&#45;./ ,&#45;&#45;,'  ,&#45;&#45;&#45;&#45;.           ,&#45;&#45;.   ,&#45;&#45;.) / . &#45;&#45;. /,&#45;&#45;./ ,&#45;&#45;,'-->
+<!--|  | |  |  | \-.  \ |   \ |  |\ '  .-./-')  |  |OO)|   \ |  |\ '  .-./-')        |   `.'   |  | \-.  \ |   \ |  |\-->
+<!--|   .|  |.-'-'  |  ||    \|  | )|  |_( O- ) |  |  \|    \|  | )|  |_( O- )       |         |.-'-'  |  ||    \|  | )-->
+<!--|       | \| |_.'  ||  .     |/ |  | .&#45;&#45;, \ |  |(_/|  .     |/ |  | .&#45;&#45;, \       |  |'.'|  | \| |_.'  ||  .     |/-->
+<!--|  .-.  |  |  .-.  ||  |\    | (|  | '. (_/,|  |_.'|  |\    | (|  | '. (_/       |  |   |  |  |  .-.  ||  |\    |-->
+<!--|  | |  |  |  | |  ||  | \   |  |  '&#45;&#45;'  |(_|  |   |  | \   |  |  '&#45;&#45;'  |        |  |   |  |  |  | |  ||  | \   |-->
+<!--`&#45;&#45;' `&#45;&#45;'  `&#45;&#45;' `&#45;&#45;'`&#45;&#45;'  `&#45;&#45;'   `&#45;&#45;&#45;&#45;&#45;&#45;'   `&#45;&#45;'   `&#45;&#45;'  `&#45;&#45;'   `&#45;&#45;&#45;&#45;&#45;&#45;'         `&#45;&#45;'   `&#45;&#45;'  `&#45;&#45;' `&#45;&#45;'`&#45;&#45;'  `&#45;&#45;'-->
+<!--</pre>-->
+<!--</div>-->
+
+<h1 class="customfont">HANG MAN</h1>
 <!--<div id="starred"><div id="starredtext"></div></div>-->
 <h1 class="starredtext"><span class="text-wrapper"><span class="letters">&nbsp</span></span></h1>
 <div id="info">
