--- a/index.html
+++ b/index.html
@@ -45,20 +45,20 @@
 <div id="info">
     <div id="attemptsremain">10 letter attempts remain.</div>
     <div id="multiremain">5 word attempts remain.</div>
-    <div id="inputwrap" class="input-group mb-3">
+    <div id="inputwrap" class="input-group mb-3 form-row align-items-center">
         <button id="resetbutton" class="btn btn-outline-secondary" type="button"><i class="bi bi-arrow-repeat"></i></button>
         <input id="inputfield" type="text" class="form-control" placeholder="Guess letter or word..." aria-label="Letter guessing input field" aria-describedby="basic-addon2" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Guess letter or word...'">
-        <div class="input-group-append">
         <button id="inputbutton" class="btn btn-outline-secondary" type="button"><i class="bi bi-check-lg"></i></button>
-      </div>
     </div>
 </div>
 
 <h1 class="infosection">
-  <span class="text-wrapper">
-    <span class="infomessage">&nbsp</span>
-    <span class="line"></span>
-  </span>
+
+    <span class="text-wrapper">
+<!--        <i id="startarrow" class="bi bi-caret-up-fill"></i>-->
+        <span class="infomessage">&nbsp</span>
+        <span class="line"></span>
+    </span>
 </h1>
 
 
