--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
 <!--<div id="starred"><div id="starredtext"></div></div>-->
 <h1 class="starredtext"><span class="text-wrapper"><span class="letters">&nbsp</span></span></h1>
 <div id="info">
+<!--    <div id="attemptbar"></div>-->
     <div id="attemptsremain">10 letter attempts remain.</div>
     <div id="multiremain">5 word attempts remain.</div>
     <div id="inputwrap" class="input-group mb-3 form-row align-items-center">
