--- a/index.html
+++ b/index.html
@@ -43,15 +43,15 @@
 <!--<div id="starred"><div id="starredtext"></div></div>-->
 <h1 class="starredtext"><span class="text-wrapper"><span class="letters">&nbsp</span></span></h1>
 <div id="info">
-<!--    <div id="attemptbar"></div>-->
     <div id="attemptsremain">10 letter attempts remain.</div>
     <div id="multiremain">5 word attempts remain.</div>
-    <div id="inputwrap" class="input-group mb-3 form-row align-items-center">
+</div>
+
+<div id="inputwrap" class="input-group mb-3 form-row align-items-center">
         <button id="resetbutton" class="btn btn-outline-secondary" type="button"><i class="bi bi-arrow-repeat"></i></button>
         <input id="inputfield" type="text" class="form-control" placeholder="Guess letter or word..." aria-label="Letter guessing input field" aria-describedby="basic-addon2" onfocus="this.placeholder = ''" onblur="this.placeholder = 'Guess letter or word...'">
         <button id="inputbutton" class="btn btn-outline-secondary" type="button"><i class="bi bi-check-lg"></i></button>
-    </div>
-</div>
+    </div> <!-- input field and buttons -->
 
 <h1 class="infosection">
 
