--- a/index.html
+++ b/index.html
@@ -15,8 +15,8 @@
 
     <style type="text/css">
     @font-face {
-    font-family: "My Custom Font";
-    src: url(/fonts/StickFigures.ttf) format("truetype");
+    font-family: "MyCustomFont";
+    src: url(/fonts/StickFigures.ttf) format("opentype");
     }
     </style>
 
