--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Hanging Man Game</title>
+    <title>HangMan Game</title>
 
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-KyZXEAg3QhqLMpG8r+8fhAXLRk2vvoC2f3B09zVXn8CA5QIVfZOJ3BCsw2P0p/We" crossorigin="anonymous"> <!-- Bootstrap5.1 -->
     <link rel="stylesheet" type="text/css" href="css/hangmanstyles.css"> <!-- Local CSS -->
@@ -12,32 +12,12 @@
     <script src="js/Hangman.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/animejs/2.0.2/anime.min.js"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.5.0/font/bootstrap-icons.css">
-
-    <style type="text/css">
-    @font-face {
-    font-family: "MyCustomFont";
-    src: url(/fonts/StickFigures.ttf) format("opentype");
-    }
-    </style>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Nosifer&display=swap" rel="stylesheet">
 
 </head>
 <body>
-
-
-
-<!--<div id="asciiwrap">-->
-<!--<pre id="ascii">-->
-<!--('-. .-.   ('-.         .-') _                         .-') _                   _   .-')      ('-.         .-') _-->
-<!--( OO )  /  ( OO ).-.    ( OO ) )                       ( OO ) )                 ( '.( OO )_   ( OO ).-.    ( OO ) )-->
-<!--,&#45;&#45;. ,&#45;&#45;.  / . &#45;&#45;. /,&#45;&#45;./ ,&#45;&#45;,'  ,&#45;&#45;&#45;&#45;.     ,-.-') ,&#45;&#45;./ ,&#45;&#45;,'  ,&#45;&#45;&#45;&#45;.           ,&#45;&#45;.   ,&#45;&#45;.) / . &#45;&#45;. /,&#45;&#45;./ ,&#45;&#45;,'-->
-<!--|  | |  |  | \-.  \ |   \ |  |\ '  .-./-')  |  |OO)|   \ |  |\ '  .-./-')        |   `.'   |  | \-.  \ |   \ |  |\-->
-<!--|   .|  |.-'-'  |  ||    \|  | )|  |_( O- ) |  |  \|    \|  | )|  |_( O- )       |         |.-'-'  |  ||    \|  | )-->
-<!--|       | \| |_.'  ||  .     |/ |  | .&#45;&#45;, \ |  |(_/|  .     |/ |  | .&#45;&#45;, \       |  |'.'|  | \| |_.'  ||  .     |/-->
-<!--|  .-.  |  |  .-.  ||  |\    | (|  | '. (_/,|  |_.'|  |\    | (|  | '. (_/       |  |   |  |  |  .-.  ||  |\    |-->
-<!--|  | |  |  |  | |  ||  | \   |  |  '&#45;&#45;'  |(_|  |   |  | \   |  |  '&#45;&#45;'  |        |  |   |  |  |  | |  ||  | \   |-->
-<!--`&#45;&#45;' `&#45;&#45;'  `&#45;&#45;' `&#45;&#45;'`&#45;&#45;'  `&#45;&#45;'   `&#45;&#45;&#45;&#45;&#45;&#45;'   `&#45;&#45;'   `&#45;&#45;'  `&#45;&#45;'   `&#45;&#45;&#45;&#45;&#45;&#45;'         `&#45;&#45;'   `&#45;&#45;'  `&#45;&#45;' `&#45;&#45;'`&#45;&#45;'  `&#45;&#45;'-->
-<!--</pre>-->
-<!--</div>-->
 
 <h1 class="customfont">HANG MAN</h1>
 <!--<div id="starred"><div id="starredtext"></div></div>-->
@@ -73,3 +53,17 @@
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
 </body>
 </html>
+
+<!--<div id="asciiwrap">-->
+<!--<pre id="ascii">-->
+<!--('-. .-.   ('-.         .-') _                         .-') _                   _   .-')      ('-.         .-') _-->
+<!--( OO )  /  ( OO ).-.    ( OO ) )                       ( OO ) )                 ( '.( OO )_   ( OO ).-.    ( OO ) )-->
+<!--,&#45;&#45;. ,&#45;&#45;.  / . &#45;&#45;. /,&#45;&#45;./ ,&#45;&#45;,'  ,&#45;&#45;&#45;&#45;.     ,-.-') ,&#45;&#45;./ ,&#45;&#45;,'  ,&#45;&#45;&#45;&#45;.           ,&#45;&#45;.   ,&#45;&#45;.) / . &#45;&#45;. /,&#45;&#45;./ ,&#45;&#45;,'-->
+<!--|  | |  |  | \-.  \ |   \ |  |\ '  .-./-')  |  |OO)|   \ |  |\ '  .-./-')        |   `.'   |  | \-.  \ |   \ |  |\-->
+<!--|   .|  |.-'-'  |  ||    \|  | )|  |_( O- ) |  |  \|    \|  | )|  |_( O- )       |         |.-'-'  |  ||    \|  | )-->
+<!--|       | \| |_.'  ||  .     |/ |  | .&#45;&#45;, \ |  |(_/|  .     |/ |  | .&#45;&#45;, \       |  |'.'|  | \| |_.'  ||  .     |/-->
+<!--|  .-.  |  |  .-.  ||  |\    | (|  | '. (_/,|  |_.'|  |\    | (|  | '. (_/       |  |   |  |  |  .-.  ||  |\    |-->
+<!--|  | |  |  |  | |  ||  | \   |  |  '&#45;&#45;'  |(_|  |   |  | \   |  |  '&#45;&#45;'  |        |  |   |  |  |  | |  ||  | \   |-->
+<!--`&#45;&#45;' `&#45;&#45;'  `&#45;&#45;' `&#45;&#45;'`&#45;&#45;'  `&#45;&#45;'   `&#45;&#45;&#45;&#45;&#45;&#45;'   `&#45;&#45;'   `&#45;&#45;'  `&#45;&#45;'   `&#45;&#45;&#45;&#45;&#45;&#45;'         `&#45;&#45;'   `&#45;&#45;'  `&#45;&#45;' `&#45;&#45;'`&#45;&#45;'  `&#45;&#45;'-->
+<!--</pre>-->
+<!--</div>-->
