--- a/index.html
+++ b/index.html
@@ -45,6 +45,9 @@
     </span>
 </h1>
 
+<button id="wordbutton" class="btn btn-outline-secondary" type="button"><i class="bi">word</i></button>
+<button id="phrasebutton" class="btn btn-outline-secondary" type="button"><i class="bi">phrase</i></button>
+
 
 
 
