added navbar added word/phrase buttons

--- a/index.html
+++ b/index.html
@@ -22,6 +22,18 @@
 </head>
 <body>
 
+<nav id="MainNavbar" class="navbar navbar-expand-sm navbar-dark bg-dark">
+    <div class="container-fluid mx-5">
+        <button id="wordbutton" class="btn btn-outline-secondary" type="button"><i class="bi">word</i></button>
+        <button id="phrasebutton" class="btn btn-outline-secondary" type="button"><i class="bi">phrase</i></button>
+<!--        <a class="navbar-brand" href="#"></a>-->
+<!--        <button id="navbarToggler" class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#NavbarItems" aria-controls="NavbarItems" aria-expanded="false" aria-label="Toggle navigation">-->
+<!--            <span class="navbar-toggler-icon"></span>-->
+<!--        </button>-->
+    </div>
+</nav>
+
+
 <h1 class="customfont">HANG MAN</h1>
 <!--<div id="starred"><div id="starredtext"></div></div>-->
 <h1 class="starredtext"><span class="text-wrapper"><span class="letters">&nbsp</span></span></h1>
@@ -45,8 +57,7 @@
     </span>
 </h1>
 
-<button id="wordbutton" class="btn btn-outline-secondary" type="button"><i class="bi">word</i></button>
-<button id="phrasebutton" class="btn btn-outline-secondary" type="button"><i class="bi">phrase</i></button>
+
 
 
 
