--- a/index.html
+++ b/index.html
@@ -21,8 +21,8 @@
 
 </head>
 <body>
-
-<nav id="MainNavbar" class="navbar navbar-expand-sm navbar-dark bg-dark">
+<div class="page">
+<nav id="MainNavbar" class="navbar navbar-expand-sm navbar-dark">
     <div class="container-fluid mx-5">
         <button id="wordbutton" class="btn btn-outline-secondary" type="button"><i class="bi">word</i></button>
         <button id="phrasebutton" class="btn btn-outline-secondary" type="button"><i class="bi">phrase</i></button>
@@ -67,6 +67,7 @@
 
 <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.9.3/dist/umd/popper.min.js" integrity="sha384-eMNCOe7tC1doHpGoWe/6oMVemdAVTMs2xqW4mwXrXsW0L84Iytr2wi5v2QjrP/xp" crossorigin="anonymous"></script>
 <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.1.0/dist/js/bootstrap.min.js" integrity="sha384-cn7l7gDp0eyniUwwAZgrzD06kc/tftFf19TOAs2zVinnD/C7E91j9yyk5//jjpt/" crossorigin="anonymous"></script>
+</div>
 </body>
 </html>
 
